--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -1,3 +1,35 @@
+/**
+ * @file    globals.css
+ *
+ * @author  Michal Majer
+ *          Faculty of Information Technology \n
+ *          Brno University of Technology \n
+ *          xmajer21@stud.fit.vutbr.cz
+ *
+ * @brief   [TODO]
+ *
+ * @date    Day Month Year, Hour:Minute (created)
+ *          27 April      2021 20:00 (revised)
+ *
+ * @section Licence
+ * This file is part of the Superscalar simulator app
+ * <p>
+ * Copyright (C) 2023  Michal Majer
+ * <p>
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ * <p>
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ * <p>
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
