#2: File brief descriptions

--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -6,7 +6,7 @@
  *          Brno University of Technology \n
  *          xmajer21@stud.fit.vutbr.cz
  *
- * @brief   [TODO]
+ * @brief   Global styles for the whole app
  *
  * @date    Day Month Year, Hour:Minute (created)
  *          27 April      2021 20:00 (revised)
