--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -391,4 +391,10 @@
     content: "";
     border-width: 0.5rem 0 0.5rem 0.5rem;
   }
+
+  /* FU Configuration table */
+  .fu-grid {
+    @apply grid gap-x-4 gap-y-1 justify-center;
+    grid-template-columns: auto auto 1fr auto;
+  }
 }
