--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -118,8 +118,8 @@
   }
 
   .dotted-bg {
-    background-image: radial-gradient(circle at 1px 1px, #bbb 1px, transparent 0);
-    background-size: 24px 24px;
+    background-image: radial-gradient(circle at 1px 1px, #cca 1px, transparent 0);
+    background-size: 20px 20px;
   }
 
   p {
@@ -400,9 +400,18 @@
 
   /* Simulation view grid */
   .sim-grid {
-    @apply grid gap-4 justify-center m-4 mt-16;
+    @apply inline-grid gap-4 justify-center m-4 mt-16;
     grid-auto-columns: 1fr;
     grid-auto-rows: auto;
+  }
+
+  .col-grid {
+    @apply flex gap-4 justify-center m-4 mt-16;
+  }
+
+  .global-grid {
+    @apply grid justify-items-start items-start;
+    grid-template-columns: repeat(2, auto);
   }
 
   .program {
@@ -427,44 +436,46 @@
   }
 
   .aluIssue {
-    grid-column: 4 / span 1;
-    grid-row: 1 / span 2;
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
   }
 
   /* FUs also define tailwind class for positioning in a row */
   .aluFu {
-    grid-column: 4 / span 1;
+    grid-column: 1 / span 1;
     grid-row-end: span 1;
   }
 
   .fpIssue {
-    grid-column: 5 / span 1;
-    grid-row: 1 / span 2;
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 1;
   }
 
   .fpFu {
-    grid-column: 5 / span 1;
+    grid-column: 2 / span 1;
     grid-row-end: span 1;
   }
 
   .branchIssue {
-    grid-column: 6 / span 1;
-    grid-row: 1 / span 2;
+    grid-column: 3 / span 1;
+    grid-row: 1 / span 1;
   }
 
   .branchFu {
-    grid-column: 6 / span 1;
+    grid-column: 3 / span 1;
     grid-row-end: span 1;
   }
 
+
+
   .storeBuffer {
     grid-column: 1 / span 2;
-    grid-row: 6 / span 2;
+    grid-row: 1 / span 2;
   }
 
   .loadBuffer {
     grid-column: 3 / span 2;
-    grid-row: 6 / span 2;
+    grid-row: 1 / span 2;
   }
 
 }
