#16: Issue items have proper values

--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -478,4 +478,16 @@
     grid-row: 1 / span 2;
   }
 
+  .memory-grid {
+    grid-template-columns: repeat(9, max-content);
+  }
+
+  .memory-grid *:first-child {
+    margin-right: 0.5em;
+  }
+
+  .memory-grid *:nth-child(5) {
+    margin-right: 0.5em;
+  }
+  
 }
