--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -454,11 +454,8 @@
     grid-row: 1 / span 2;
   }
 
-  .memory-grid {
-    grid-template-columns: repeat(8, max-content);
-  }
-
-  .memory-grid *:nth-child(4) {
+  /* make space every 4 bytes */
+  .memory-grid *:nth-child(4n) {
     margin-right: 0.5em;
   }
   
