--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -255,29 +255,28 @@
 
 @layer utilities {
 
-  /* ===== Scrollbar CSS ===== */
-  /* Source: https://codepen.io/stephenpaton-tech/full/JjRvGmY */
-  /* Firefox */
-  * {
-    scrollbar-width: auto;
-    scrollbar-color: #a1a1a1 #f5f5f5;
+  /* custom scrollbar
+     source: https://codepen.io/xtrp/pen/QWjREeo
+  */
+  ::-webkit-scrollbar {
+    width: 14px;
+    height: 14px;
   }
 
-  /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
   }
 
-  *::-webkit-scrollbar-track {
-    background: #ffffff;
-  }
-
-  *::-webkit-scrollbar-thumb {
-    background-color: #a1a1a1;
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
     border-radius: 10px;
-    border: 3px solid #ffffff;
+    border: 4px solid transparent;
+    background-clip: content-box;
   }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  } 
 
   /* Link underline */
   .link {
