--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -291,40 +291,43 @@
 
   /* Navbar */
 
-  /* The navbar will shrink to 12 on smaller screens */
+  /* The navbar will shrink to 12 on smaller screens. Z index creates stacking context, which
+     renders navbar above page content.
+  */
   .navbar-slot {
-    @apply shrink min-w-12 w-12 2xl:w-64;
+    @apply shrink min-w-12 w-12 2xl:w-64 relative z-30;
   }
 
   /* Parent of .navbar */
   *:has(> .navbar) {
     container: navbarslot / inline-size;
   }
+ 
+  /* Show texts if the container is big (large screens) */
+  @container navbarslot (min-width: 15rem) {
+    .nav-text {
+      @apply block;
+    }
+  }
 
   .navbar {
-    @apply relative transition-all duration-300 w-12 h-full;
+    @apply w-12 h-full;
+  }
+  
+  .navbar-inner {
+    @apply bg-background w-12 h-full p-2;
   }
 
   .navbar:hover .navbar-inner {
     @apply w-64 drop-shadow;
   }
-
-  .navbar:hover .nav-text {
-    @apply block;
-  }
-
-  .navbar-inner {
-    @apply bg-white w-12 h-full p-2 absolute inset-y-0 left-0 z-50;
-  }
-
+  
   .nav-text {
     @apply hidden;
   }
 
-  @container navbarslot (min-width: 15rem) {
-    .nav-text {
-      @apply block;
-    }
+  .navbar:hover .nav-text {
+    @apply block;
   }
 
   /* Tooltip - behavior only */
