--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -512,6 +512,52 @@
     z-index: 12;
   }
 
+  /* Timeline loading spin
+  Source: https://codepen.io/Chester/pen/QPoyjN
+   */
+
+  @keyframes rotate {
+    0% {
+      transform: translateX(120%);
+    }
+    100% {
+      transform: translateX(-120%);
+    }
+  }
+
+  .loading-border {
+    overflow: hidden;
+  }
+    
+  .loading-border::before {
+    content: '';
+    position: absolute;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: 50% 50%, 50% 50%;
+    /* matches bg-gray-100 */
+    --bg: rgb(243, 244, 246);
+    --loading-color: rgb(209, 213, 219);
+    background-color: var(--loading-color);
+    animation: rotate 4s linear infinite;
+    border-radius: 4px;
+  }
+    
+  .loading-border::after {
+    @apply bg-gray-100;
+    content: '';
+    position: absolute;
+    z-index: -1;
+    left: 3px;
+    top: 3px;
+    width: calc(100% - 6px);
+    height: calc(100% - 6px);
+    border-radius: 9999px;
+  }
+  
+
   /* Icon highlight */
 
   .iconHighlight {
