--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -71,7 +71,7 @@
   }
  
   .dark {
-    --background: 20 14.3% 4.1%;
+    --background: 200 5.9% 10%;
     --foreground: 60 9.1% 97.8%;
  
     --card: 20 14.3% 4.1%;
@@ -117,37 +117,21 @@
   }
 
   .neutral-bg {
-    @apply bg-neutral-99 text-neutral-10;
+    @apply bg-neutral-99 text-neutral-10 dark:bg-neutral-10 dark:text-neutral-99;
+  }
+
+  .accent-bg {
+    @apply bg-[#f5f5f5] dark:bg-gray-700;
   }
 
   /* 5px is the offset */
   .dotted-bg {
-    background-image: radial-gradient(circle at 5px 5px, #cca 1px, transparent 0);
+    background-image: radial-gradient(circle at 5px 5px, hsl(var(--accent)) 1px, hsl(var(--background)) 0);
     background-size: 20px 20px;
   }
 
   p {
     @apply my-2;
-  }
-
-  table {
-    @apply text-left text-sm text-gray-600;
-  }
-
-  thead {
-    @apply bg-gray-50 text-xs uppercase text-gray-700;
-  }
-
-  thead th {
-    @apply px-6 py-3;
-  }
-
-  tbody tr {
-    @apply border-b bg-white;
-  }
-
-  tbody th {
-    @apply whitespace-nowrap px-6 py-4 font-medium text-gray-900;
   }
 
   /* Source: https://helplogger.blogspot.com/2013/10/css-keyboard-keys-on-blogger.html */
@@ -274,7 +258,8 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    background-color: #d6dee1;
+    @apply bg-gray-300 dark:bg-gray-700;
+    /* background-color: #d6dee1; */
     border-radius: 10px;
     border: 4px solid transparent;
     background-clip: content-box;
@@ -283,6 +268,10 @@
   ::-webkit-scrollbar-thumb:hover {
     background-color: #a8bbbf;
   } 
+
+  ::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
 
   /* Link underline */
   .link {
@@ -382,7 +371,7 @@
 
   /* Form when in error state */
   .form-input-error {
-    @apply border-red-500 bg-red-50 text-red-900 placeholder-red-700 focus-visible:ring-red-500;
+    @apply border-red-500 bg-red-500/15 text-red-800 placeholder-red-700 focus-visible:ring-red-500;
   }
 
   /* folding */
