--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -38,6 +38,9 @@
 
   /* shadcn/ui */
   :root {
+
+    /* scrollbar-color: red transparent; */
+
     --background: 0 0% 100%;
     --foreground: 20 14.3% 4.1%;
 
@@ -69,7 +72,7 @@
     --radius: 0.5rem;
 
     /* Used for the register/instruction highlight on hover. TODO: dark mode */
-    --hover-highlight-color: rgba(100, 100, 100, 0.15);
+    --hover-highlight-color: #D5E6E9; /* primary-90 */
   }
  
   /* .dark {
@@ -107,7 +110,7 @@
 
   /* Default border color */
   * {
-    @apply border-outline list-inside;
+    @apply border-outlineVariant list-inside;
   }
 
   body {
@@ -353,20 +356,15 @@
     height: 14px;
   }
 
-  ::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
-
   ::-webkit-scrollbar-thumb {
-    @apply bg-gray-300 dark:bg-gray-700;
-    /* background-color: #d6dee1; */
+    @apply bg-neutral-80 dark:bg-neutral-20;
     border-radius: 10px;
     border: 4px solid transparent;
-    background-clip: content-box;
+    background-clip: padding-box;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background-color: #a8bbbf;
+    @apply bg-neutral-70 dark:bg-neutral-30;
   } 
 
   ::-webkit-scrollbar-corner {
@@ -671,10 +669,10 @@
     transform: translateY(2px);
   }
 
-  /* Right pointing red arrow */
+  /* Right pointing red arrow. Used in PC pointer */
 
   .rectangle::after {
-    @apply border-l-red-500 border-y-transparent border-r-transparent absolute top-0 left-full;
+    @apply border-l-tertiary border-y-transparent border-r-transparent absolute top-0 left-full;
     content: "";
     border-width: 0.5rem 0 0.5rem 0.5rem;
   }
@@ -689,7 +687,7 @@
 
   .global-grid {
     @apply grid items-start mt-16 m-4;
-    --gap: 2rem;
+    --gap: 2.5rem;
     gap: var(--gap);
   }
 
@@ -756,48 +754,9 @@
     grid-template-rows: subgrid;
   }
 
-  /* Style for instruction bubble */
-  .instruction-bubble {
-    @apply rounded-sm border h-8;
-  }
-
   /* Heatmap statistic transition */
   .heatmap-transition  * {
     @apply transition-colors ease-in duration-200;
-  }
-
-  /* Expand side panel */
-
-  .expand-area {
-    transform: translateY(-50%);
-  }
-
-  .expand-area * {
-    @apply transition-all duration-200;
-  }
-
-  .expand-arrow-up {
-    transform: translateY(10%);
-  }
-
-  .expand-arrow-down {
-    transform: translateY(-10%);
-  }
-
-  .expand-area[data-expanded='true']:hover .expand-arrow-up {
-    transform: translateY(10%) rotateZ(-20deg);
-  }
-
-  .expand-area:hover .expand-arrow-up {
-    transform: translateY(10%) rotateZ(20deg);
-  }
-
-  .expand-area[data-expanded='true']:hover .expand-arrow-down {
-    transform: translateY(-10%) rotateZ(20deg);
-  }
-
-  .expand-area:hover .expand-arrow-down {
-    transform: translateY(-10%) rotateZ(-20deg);
   }
 
   /* Memory form */
@@ -812,5 +771,15 @@
   .memory-form-row {
     @apply grid gap-2 col-span-4;
     grid-template-columns: subgrid;
+  }
+
+  /* add padding to elements. Used for divide-x */
+  .divide-pad > *:not(:first-child) {
+    @apply pl-1;
+  }
+
+  /* Container for lists of instructions */
+  .instruction-list-container > * {
+    @apply pt-1;
   }
 }
