#30: Added l/s units to sim window

--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -833,7 +833,7 @@
   }
 
   /* Container for lists of instructions */
-  .instruction-list-container > * {
+  .instruction-list-container > *:not(:first-child) {
     @apply pt-1;
   }
 }
