#30: l/s address shown in buffers

--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -803,4 +803,9 @@
   .instruction-list-container > *:not(:first-child) {
     @apply pt-1;
   }
+
+  /* Container for tags, pills, badges */
+  .badge-container {
+    @apply flex gap-2 flex-wrap;
+  }
 }
